# PromptGuard

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  NOTICE  README.md  docker-compose.yml  pyproject.toml
benchmarks/: bench_pipeline_latency.py  run_detection_benchmarks.py  run_latency_matrix.py  run_real_corpus_benchmarks.py
benchmarks/results/: detection-synthetic.json  detection-synthetic.md  latency-matrix.json  latency-matrix.md
decisions/: 001-python-and-build.md  002-opf-service-shape.md  003-regex-pattern-sourcing.md  004-action-engine-deferred-rewrite.md  005-presidio-anonymizer-not-used.md  006-litellm-config-day-one.md  007-pytest-pythonpath-workaround.md  008-action-engine-split.md  009-opf-eager-load-and-hard-fail.md  010-litellm-hook-customlogger-bridge.md  011-json-safe-substitution.md  012-random-token-ids-and-format.md  013-token-map-eviction.md  014-sse-coalesce-on-restoration.md  015-litellm-allow-requests-on-db-unavailable.md  016-policy-hot-reload-opt-in-polling.md  017-adapter-framework-formalization.md  018-llm-judge-and-audit-writer.md  019-per-rule-audit-only-and-llm-judge-validation.md  020-streaming-restorer-preserve-content-block-index.md  021-litellm-image-digest-pin.md  022-mitm-verification-harness.md  023-span-overlap-greedy-non-overlap-selection.md  024-normalization-pre-detection-layer.md  025-llm-judge-removal-after-v1.1-validation.md  026-real-corpus-benchmarks.md  027-opf-aggregation-strategy-knob.md  TEMPLATE.md
docker/litellm/: Dockerfile  config-mock.yaml  config.yaml  handler.py
docker/mock_anthropic/: Dockerfile  server.py
docs/: ARCHITECTURE.md  adapters.md  architecture.md  audit-logging.md  benchmarks.md  llm-judge.md  policy-schema.md  research-notes.md  segment-coverage.md  threat-model.md  v1-decisions-log.md  v2-roadmap.md
docs/blog-assets/: 01-tokenize-roundtrip-user-terminal.txt  02-tokenize-roundtrip-upstream-view.json  03-real-anthropic-roundtrip.txt  04-claude-cli-roundtrip.txt  README.md
docs/policy-examples/: README.md  nda-strict.yaml  passthrough-test.yaml
local/reports/: 2026-05-02.md  2026-05-04.md  2026-05-05.md  2026-05-07.md
policies/: default.yaml  healthcare-leaning.yaml  nda-strict.yaml  passthrough-test.yaml  pentest-engagement.yaml  regex-only.yaml
reports/: 2026-04-30.md  2026-05-01.md  2026-05-03.md  2026-05-06.md  TEMPLATE.md  sprint-summary.md
scripts/: release-check.sh
src/promptguard/: __init__.py
tests/: conftest.py
tests/integration/: test_docker_stack.py  test_live_stack.py  test_pipeline.py  test_tokenize_round_trip.py
tests/unit/: test_action_engine.py  test_cli.py  (+19 more)
(+57 files in other folders)
